--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -3,13 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interfaz con Botones</title>
+  <title>Panel de Control</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    .acciones-section {
+      background-color: #879a7d; /* Color de fondo de la sección "Acciones" */
+      padding: 20px;
+    }
+
+    .funciones-section {
+      background-color: #99ad8f; /* Color de fondo de la sección "Funciones" */
+      padding: 20px;
+    }
+  </style>
 </head>
 <body class="bg-dark">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Datos Persona Huella</a>
+      <a class="navbar-brand" href="#">Dashboard</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,24 +34,30 @@
     </div>
   </nav>
   <div class="container mt-5">
-    <div class="row">
-      <div class="col">
-        <button type="button" class="btn btn-primary btn-block mb-3" id="Registrar-huella" disabled>Registrar Huella</button>
-      </div>
-      <div class="col">
-        <button type="button" class="btn btn-primary btn-block mb-3" id="Buscar-huella" disabled>Buscar Huella</button>
-      </div>
+    <div class="acciones-section">
+      <h2>Acciones</h2>
+      <button type="button" class="btn btn-primary" id="iniciarSesionBtn">Iniciar Sesión</button>
     </div>
-    <div class="row">
-      <div class="col">
-        <button type="button" class="btn btn-primary btn-block mb-3" id="Modi-huella-data" disabled>Modificar Datos del Usuario con Huella</button>
+    <div class="funciones-section mt-3">
+      <h2>Funciones</h2>
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn btn-primary btn-block mb-3" id="Registrar-huella">Registrar Huella</button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-primary btn-block mb-3" id="Buscar-huella">Buscar Huella</button>
+        </div>
       </div>
-      <div class="col">
-        <button type="button" class="btn btn-primary btn-block mb-3" id="Eli-hulla-data" disabled>Eliminar Datos con Huella</button>
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn btn-primary btn-block mb-3" id="all-data">Leer Todos los Datos Registrados</button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-primary btn-block mb-3" id="Eli-hulla-data">Eliminar Datos con Huella</button>
+        </div>
       </div>
     </div>
   </div>
-  
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
