Update files Client

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     .acciones-section {
-      background-color: #879a7d; /* Color de fondo de la sección "Acciones" */
+      background-color: #879a7d; 
       padding: 20px;
     }
 
     .funciones-section {
-      background-color: #99ad8f; /* Color de fondo de la sección "Funciones" */
+      background-color: #99ad8f; 
       padding: 20px;
     }
   </style>
@@ -20,19 +20,33 @@
 <body class="bg-dark">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Dashboard</a>
+      <a class="navbar-brand" href="#">Panel de Control</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- Lista de elementos no disponible por ahora
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <!-- Puedes agregar otros elementos de navegación aquí si es necesario -->
-        </ul>
-        <button type="button" class="btn btn-primary" id="conectarBtn">Conectar con Arduino</button>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item mr-auto">
+              <a class="nav-link" href="pages/registrar_huella.html">Resgistrar Huella</a>
+            </li>
+            <li class="nav-item mr-auto">
+              <a class="nav-link" href="pages/buscar_huella.html">Buscar Huella</a>
+            </li>
+            <li class="nav-item mr-auto">
+              <a class="nav-link" href="pages/all.html">Mostrar Todos los Datos</a>
+            </li>
+            <li class="nav-item mr-auto">
+              <a class="nav-link" href="pages/eliminar.html">Eliminar Huella</a>
+            </li>
+          </ul>
+        </div>
+      -->
+      <button type="button" class="btn btn-primary" id="conectarBtn">Conectar con Arduino</button>
     </div>
   </nav>
+  
   <div class="container mt-5">
     <div class="acciones-section">
       <h2>Acciones</h2>
