--- a/Cliente/pages/all.html
+++ b/Cliente/pages/all.html
@@ -23,6 +23,7 @@
                     <th scope="col">Edad</th>
                     <th scope="col">Carrera</th>
                     <th scope="col">Huella</th>
+                    <th scope="col">Foto</th>
                   </tr>
                 </thead>
                 <tbody id="tabla-huellas">
