--- a/Cliente/pages/eliminar.html
+++ b/Cliente/pages/eliminar.html
@@ -74,6 +74,7 @@
       datosUsuarioEliminar.innerHTML = `<p>Nombre: [Nombre del usuario]</p>
                                         <p>Edad: [Edad del usuario]</p>
                                         <p>Carrera: [Carrera del usuario]</p>
+                                        <p>Foto: [Foto del usuario]</p>
                                         <p>Huella: [Huella del usuario]</p>`;
     }
 
