--- a/Cliente/pages/registrar_huella.html
+++ b/Cliente/pages/registrar_huella.html
@@ -28,6 +28,10 @@
                 <label for="carrera">Carrera</label>
                 <input type="text" class="form-control" id="carrera" placeholder="Ingrese su carrera">
               </div>
+              <div class="form-group">
+                <label for="carrera">Foto</label>
+                <input type="file" class="form-control" id="filePhoto" placeholder="Ingrese tu Foto">
+              </div>
               <button type="submit" class="btn btn-primary btn-block">Registrar Huella</button>
             </form>
           </div>
