Upload Files to Client

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -50,28 +50,87 @@
   <div class="container mt-5">
     <div class="acciones-section">
       <h2>Acciones</h2>
-      <button type="button" class="btn btn-primary" id="iniciarSesionBtn">Iniciar Sesión</button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#esperandoModal">Iniciar sesión por huella</button>
     </div>
     <div class="funciones-section mt-3">
-      <h2>Funciones</h2>
+      <h2 id="functions">Funciones</h2>
       <div class="row">
         <div class="col">
-          <button type="button" class="btn btn-primary btn-block mb-3" id="Registrar-huella">Registrar Huella</button>
+          <button type="button" class="btn btn-primary btn-block mb-3" id="Registrar-huella" disabled>Registrar Huella</button>
         </div>
         <div class="col">
-          <button type="button" class="btn btn-primary btn-block mb-3" id="Buscar-huella">Buscar Huella</button>
+          <button type="button" class="btn btn-primary btn-block mb-3" id="Buscar-huella" disabled>Buscar Huella</button>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <button type="button" class="btn btn-primary btn-block mb-3" id="all-data">Leer Todos los Datos Registrados</button>
+          <button type="button" class="btn btn-primary btn-block mb-3" id="all-data" disabled>Leer Todos los Datos Registrados</button>
         </div>
         <div class="col">
-          <button type="button" class="btn btn-primary btn-block mb-3" id="Eli-hulla-data">Eliminar Datos con Huella</button>
+          <button type="button" class="btn btn-primary btn-block mb-3" id="Eli-hulla-data" disabled>Eliminar Datos con Huella</button>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Modal Para conectar Arduino-->
+  <div class="modal fade" id="conexionModal" tabindex="-1" role="dialog" aria-labelledby="conexionModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="conexionModalLabel">Conexión establecida</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Conexión establecida con el servidor WebSocket
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!-- Modal de Esperando -->
+    <div class="modal fade" id="esperandoModal" tabindex="-1" role="dialog" aria-labelledby="esperandoModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="esperandoModalLabel">Esperando...</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Por favor, espera mientras se verifica la huella dactilar...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Modal de Huella Dactilar Verificada -->
+    <div class="modal fade" id="verificadoModal" tabindex="-1" role="dialog" aria-labelledby="verificadoModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="verificadoModalLabel">Huella Dactilar Verificada</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            La huella dactilar ha sido verificada exitosamente.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
