Update files to client

--- a/Cliente/pages/eliminar.html
+++ b/Cliente/pages/eliminar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eliminar Datos</title>
+  <title>Eliminar Datos con Huella</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body class="bg-dark">
@@ -12,7 +12,7 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-header bg-primary text-white">
-            Eliminar Datos
+            Eliminar Datos con Huella
           </div>
           <div class="card-body">
             <form id="eliminarForm">
