--- a/Cliente/pages/all.html
+++ b/Cliente/pages/all.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tabla de Huellas</title>
+  <title>Tabla de Datos</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body class="bg-dark">
@@ -12,7 +12,7 @@
       <div class="col-md-8">
         <div class="card">
           <div class="card-header bg-primary text-white">
-            Tabla de Huellas
+            Tabla de Datos
           </div>
           <div class="card-body">
             <div class="table-responsive">
