--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -50,7 +50,7 @@
   <div class="container mt-5">
     <div class="acciones-section">
       <h2>Acciones</h2>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#esperandoModal">Iniciar sesión por huella</button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#esperandoModal" disabled id="logInBtn">Iniciar sesión por huella</button>
     </div>
     <div class="funciones-section mt-3">
       <h2 id="functions">Funciones</h2>
