--- a/Cliente/pages/registrar_huella.html
+++ b/Cliente/pages/registrar_huella.html
@@ -8,11 +8,14 @@
   <style>
     .button-green{
       background-color: #009E0F;
-  }
-  .button-green:hover{
-      background-color: #B6D7A8;
-      color: #FFFFFF;
-  }
+    }
+    .btn-red{
+      background-color: #f50400 ;
+    }
+    .button-green:hover{
+        background-color: #B6D7A8;
+        color: #FFFFFF;
+    }
   </style>
 
 </head>
@@ -42,6 +45,7 @@
                 <label for="carrera">Foto</label>
                 <input type="file" class="form-control" id="filePhoto" placeholder="Ingrese tu Foto" accept=".jpg, .jpeg, .webp, .png">
               </div>
+              <button class="btn btn-red btn-block" id="cancel">Regresar</button>
               <button type="submit" class="btn btn-primary btn-block">Registrar Huella</button>
             </form>
           </div>
