--- a/Cliente/pages/registrar_huella.html
+++ b/Cliente/pages/registrar_huella.html
@@ -46,7 +46,7 @@
                 <input type="file" class="form-control" id="filePhoto" placeholder="Ingrese tu Foto" accept=".jpg, .jpeg, .webp, .png">
               </div>
               <button class="btn btn-red btn-block" id="cancel">Regresar</button>
-              <button type="submit" class="btn btn-primary btn-block">Registrar Huella</button>
+              <button class="btn btn-primary btn-block" id="btn-cap">Capturar Huella</button>
             </form>
           </div>
         </div>
