--- a/Cliente/pages/registrar_huella.html
+++ b/Cliente/pages/registrar_huella.html
@@ -27,28 +27,10 @@
           <div class="card-header bg-primary text-white">
             Registrar Huella
           </div>
-          <div class="card-body">
-            <form id="form">
-              <div class="form-group">
-                <label for="nombre">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
-              </div>
-              <div class="form-group">
-                <label for="edad">Edad</label>
-                <input type="number" class="form-control" id="edad" placeholder="Ingrese su edad">
-              </div>
-              <div class="form-group">
-                <label for="carrera">Carrera</label>
-                <input type="text" class="form-control" id="carrera" placeholder="Ingrese su carrera">
-              </div>
-              <div class="form-group">
-                <label for="carrera">Foto</label>
-                <input type="file" class="form-control" id="filePhoto" placeholder="Ingrese tu Foto" accept=".jpg, .jpeg, .webp, .png">
-              </div>
-              <button class="btn btn-red btn-block" id="cancel">Regresar</button>
-              <button class="btn btn-primary btn-block" id="btn-cap">Capturar Huella</button>
-            </form>
-          </div>
+        </div>
+        <div class="mt-4">
+          <button class="btn btn-red btn-block" id="cancel">Regresar</button>
+          <button class="btn btn-primary btn-block" id="btn-cap">Capturar Huella</button>
         </div>
       </div>
     </div>
