--- a/Cliente/pages/registrar_huella.html
+++ b/Cliente/pages/registrar_huella.html
@@ -30,7 +30,7 @@
         </div>
         <div class="mt-5">
           <button class="btn btn-red btn-block" id="cancel">Regresar</button>
-          <button class="btn btn-primary btn-block" id="btn-cap">Capturar Huella</button>
+          <button class="btn btn-primary btn-block" id="btn-cap">Capturar Huella En Lector</button>
         </div>
       </div>
     </div>
