--- a/Cliente/pages/buscar_huella.html
+++ b/Cliente/pages/buscar_huella.html
@@ -15,7 +15,7 @@
             Buscar Datos Con Huellas
           </div>
           <div class="card-body">
-            <form>
+            <form id="form">
               <div class="form-group">
                 <label for="nombre">Nombre</label>
                 <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre">
@@ -45,5 +45,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="../js/buscarHuella.js"></script>
 </body>
 </html>
