--- a/Cliente/pages/eliminar.html
+++ b/Cliente/pages/eliminar.html
@@ -6,6 +6,18 @@
   <title>Eliminar Datos con Huella</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+<style>
+  .button-green{
+    background-color: #009E0F;
+  }
+  .btn-red{
+    background-color: #f50400 ;
+  }
+  .button-green:hover{
+      background-color: #B6D7A8;
+      color: #FFFFFF;
+  }
+</style>
 <body class="bg-dark">
   <div class="container mt-5">
     <div class="row justify-content-center">
@@ -51,7 +63,16 @@
       </div>
     </div>
   </div>
-
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <h5 class="modal-title mb-4" id="exampleModalLabel"></h5>
+          <button type="button" class="btn button-green me-2" id="btn-okey" data-bs-dismiss="modal">Aceptar</button> 
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
