--- a/Proyecto-lector-huella/front/index.html
+++ b/Proyecto-lector-huella/front/index.html
@@ -21,28 +21,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Panel de Control</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Lista de elementos no disponible por ahora
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item mr-auto">
-              <a class="nav-link" href="pages/registrar_huella.html">Resgistrar Huella</a>
-            </li>
-            <li class="nav-item mr-auto">
-              <a class="nav-link" href="pages/buscar_huella.html">Buscar Huella</a>
-            </li>
-            <li class="nav-item mr-auto">
-              <a class="nav-link" href="pages/all.html">Mostrar Todos los Datos</a>
-            </li>
-            <li class="nav-item mr-auto">
-              <a class="nav-link" href="pages/eliminar.html">Eliminar Huella</a>
-            </li>
-          </ul>
-        </div>
-      -->
-      <button type="button" class="btn btn-primary" id="conectarBtn">Conectar con Arduino</button>
+      <button type="button" class="btn btn-primary" id="conectarBtn">Conectar con el servidor</button>
     </div>
   </nav>
 
