--- a/Proyecto-lector-huella/front/pages/eliminar.html
+++ b/Proyecto-lector-huella/front/pages/eliminar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eliminar Datos con Huella</title>
+  <title>Eliminar Datos</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <style>
@@ -24,7 +24,7 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-header bg-primary text-white">
-            Eliminar Datos con Huella
+            Eliminar Datos
           </div>
           <div class="card-body">
             <form id="eliminarForm">
@@ -32,6 +32,7 @@
                 <label for="id">ID</label>
                 <input type="text" class="form-control" id="id" placeholder="Ingrese el ID del usuario a eliminar">
               </div>
+              <button type="button" class="btn btn-secondary btn-block" id="regresar">Regresar</button>
               <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#confirmarEliminarModal">Eliminar Datos</button>
             </form>
           </div>
@@ -51,7 +52,6 @@
           </button>
         </div>
         <div class="modal-body">
-          ¿Estás seguro de que deseas eliminar los datos de este usuario?
           <div id="datosUsuarioEliminar">
             <!-- Aquí se mostrarán los datos del usuario a eliminar -->
           </div>
