update files to client

--- a/Proyecto-lector-huella/front/pages/registrar_huella.html
+++ b/Proyecto-lector-huella/front/pages/registrar_huella.html
@@ -36,6 +36,10 @@
                 <input type="text" class="form-control" id="nombre" name="nombre" required>
               </div>
               <div class="mb-3">
+                <label for="nombre" class="form-label text-black">Id donde guardar huella</label>
+                <input type="number" class="form-control" id="id_huella" name="id_huella" required aria-valuemin="1" aria-valuemax="250">
+              </div>
+              <div class="mb-3">
                 <label for="apellido_paterno" class="form-label text-black">Apellido Paterno</label>
                 <input type="text" class="form-control" id="apellidoPaterno" name="apellido_paterno" required>
               </div>
