--- a/Proyecto-lector-huella/front/pages/registrar_huella.html
+++ b/Proyecto-lector-huella/front/pages/registrar_huella.html
@@ -59,10 +59,6 @@
                 <label for="carrera" class="form-label text-black">Carrera</label>
                 <input type="text" class="form-control" id="carrera" name="carrera" required>
               </div>
-              <div class="mb-3">
-                <label for="foto" class="form-label text-black">Foto</label>
-                <input type="file" class="form-control-file" id="fotoUser" name="foto" accept=".jpg, .png, .jpeg, .webp" required>
-              </div>
               <div class="mt-3">
                 <button class="btn btn-red btn-block" id="cancel">Regresar</button>
                 <button class="btn btn-green btn-block" id="registrarData">Registrar</button>
@@ -70,6 +66,11 @@
             </form>
           </div>
         </div>
+      </div>
+      <div class="col bg-secondary justify-content-center text-black p-4">
+        <ul id="msg">Mensajes: 
+
+        </ul>
       </div>
     </div>
   </div>
