--- a/Proyecto-lector-huella/front/pages/all.html
+++ b/Proyecto-lector-huella/front/pages/all.html
@@ -16,22 +16,23 @@
           </div>
           <div class="card-body">
             <div class="table-responsive">
-              <table class="table table-striped table-dark">
+              <table class="table table-striped table-dark tam">
                 <thead>
                   <tr>
+                    <th scope="col">id Huella</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Edad</th>
                     <th scope="col">Carrera</th>
-                    <th scope="col">Huella</th>
-                    <th scope="col">Foto</th>
+                    <th scope="col">correo Institucional</th>
                   </tr>
                 </thead>
                 <tbody id="tabla-huellas">
-                  <!-- Aquí se cargarán los datos de los usuarios -->
+
                 </tbody>
               </table>
             </div>
           </div>
+          <button class="btn btn-block btn-danger" id="back">Regresar</button>
         </div>
       </div>
     </div>
