--- a/Proyecto-lector-huella/front/pages/logIn.html
+++ b/Proyecto-lector-huella/front/pages/logIn.html
@@ -14,10 +14,13 @@
 </style>
 <body class="bg-dark">
 
-    <!-- Modal para mensaje inicial -->
-<div class="modal fade" id="verificarHuellaModal" tabindex="-1" aria-labelledby="verificarHuellaModalLabel" aria-hidden="false">
-    <div class="modal-dialog">
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
+        <div class="modal-body text-center">
+          <h5 class="modal-title mb-4" id="exampleModalLabel"></h5>
+          <button type="button" class="btn button-green me-2" id="btn-okey" data-bs-dismiss="modal">Aceptar</button> 
+        </div>
       </div>
     </div>
   </div>
@@ -41,11 +44,18 @@
           </div>
         </div>
       </div>
-      <p id="mensaje"></p>
+      <div class="row justify-content-center">
+        <ul class="bg-succes" id="ul">
+          
+        </ul>
+      </div>
     </div>
   </div>
 
   <script src="../js/logIn.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 </body>
