add space to select photo

--- a/Proyecto-lector-huella/front/pages/logIn.html
+++ b/Proyecto-lector-huella/front/pages/logIn.html
@@ -38,16 +38,15 @@
             <p id="fechaNacimientoUsuario"></p>
             <p id="carreraUsuario"></p>
             <p id="correoInstitucional"></p>
-          </div>
-          <div class="modal-body text-center">
-            <button class="btn btn-success btn-block" id="login">Iniciar sesion</button>
+            
+            <img src="" alt="" id="img" class="">
           </div>
         </div>
-      </div>
-      <div class="row justify-content-center">
-        <ul class="bg-succes" id="ul">
-          
-        </ul>
+        <div class="row justify-content-center mt-4">
+          <ul class="bg-succes justify-content-center" id="ul">
+            Mensajes
+          </ul>
+        </div>
       </div>
     </div>
   </div>
