--- a/Proyecto-lector-huella/front/pages/registrar_huella.html
+++ b/Proyecto-lector-huella/front/pages/registrar_huella.html
@@ -30,7 +30,7 @@
             Registrar Huella
           </div>
           <div class="card-body">
-            <form id="registroForm">
+            <form id="registroForm" >
               <div class="mb-3">
                 <label for="nombre" class="form-label text-black">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" required>
@@ -58,6 +58,10 @@
               <div class="mb-3">
                 <label for="carrera" class="form-label text-black">Carrera</label>
                 <input type="text" class="form-control" id="carrera" name="carrera" required>
+              </div>
+              <div class="mb-3">
+                <label for="foto" class="form-label text-black">Foto</label>
+                <input type="file" class="form-control-file" id="fotoUser" name="foto" accept=".jpg, .png, .jpeg, .webp" required>
               </div>
               <div class="mt-3">
                 <button class="btn btn-red btn-block" id="cancel">Regresar</button>
