--- a/Proyecto-lector-huella/front/pages/all.html
+++ b/Proyecto-lector-huella/front/pages/all.html
@@ -6,15 +6,29 @@
   <title>Tabla de Datos</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+<style>
+
+  img{
+    height: 100px;
+    width: 100px;
+  }
+</style>
 <body class="bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">Panel de Control</a>
+    </div>
+  </nav>
+
+
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <div class="card">
+        <div class="card" style="width: 810px;">
           <div class="card-header bg-primary text-white">
             Tabla de Datos
           </div>
-          <div class="card-body">
+          <div class="card-body" style="width: 800px;">
             <div class="table-responsive">
               <table class="table table-striped table-dark tam">
                 <thead>
@@ -24,6 +38,7 @@
                     <th scope="col">Edad</th>
                     <th scope="col">Carrera</th>
                     <th scope="col">correo Institucional</th>
+                    <th scope="col">Imagen</th>
                   </tr>
                 </thead>
                 <tbody id="tabla-huellas">
