--- a/Proyecto-lector-huella/front/pages/eliminar.html
+++ b/Proyecto-lector-huella/front/pages/eliminar.html
@@ -19,6 +19,14 @@
   }
 </style>
 <body class="bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">Panel de Control</a>
+    </div>
+  </nav>
+
+
+
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
