--- a/Proyecto-lector-huella/front/pages/logIn.html
+++ b/Proyecto-lector-huella/front/pages/logIn.html
@@ -24,6 +24,15 @@
   }
 </style>
 <body class="bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">Panel de Control</a>
+      </button>
+      <button type="button" class="btn btn-primary" id="reset">Reiniciar</button>
+    </div>
+  </nav>
+
+
 
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
