--- a/Proyecto-lector-huella/front/pages/all.html
+++ b/Proyecto-lector-huella/front/pages/all.html
@@ -12,9 +12,18 @@
     height: 100px;
     width: 100px;
   }
+  .space{
+    background-image: linear-gradient(#1f1f20, #2b4c7e);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    height: 100vh;
+  }
 </style>
-<body class="bg-dark">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body class="space">
+  
+
+  <nav class="navbar navbar-expand-lg ">
     <div class="container">
       <a class="navbar-brand" href="../index.html">Panel de Control</a>
     </div>
