--- a/Proyecto-lector-huella/front/pages/all.html
+++ b/Proyecto-lector-huella/front/pages/all.html
@@ -7,23 +7,19 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <style>
-
+  body{
+    background: linear-gradient(#1f1f20, #2b4c7e);
+  }
   img{
     height: 100px;
     width: 100px;
   }
-  .space{
-    background-image: linear-gradient(#1f1f20, #2b4c7e);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
 
-    height: 100vh;
-  }
 </style>
-<body class="space">
+<body class="">
   
 
-  <nav class="navbar navbar-expand-lg ">
+  <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand" href="../index.html">Panel de Control</a>
     </div>
