--- a/Proyecto-lector-huella/front/pages/logIn.html
+++ b/Proyecto-lector-huella/front/pages/logIn.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <style>
   body{
-    color: #000;
+    background-image: linear-gradient(#1f1f20, #2b4c7e);
+    background-repeat: no-repeat;
+    height: 100%;
   }
   img{
     height: 300px;
@@ -20,21 +23,16 @@
     width: 570px;
   }
   #panelSesion{
-    display: none;
+    margin-bottom: 330px;
   }
-  .space{
-    background-image: linear-gradient(#1f1f20, #2b4c7e);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 100vh;
-  }
+
   .msg{
     color: #FFFFFF;
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
   }
 </style>
-<body class="space">
+<body>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="../index.html">Panel de Control</a>
@@ -44,19 +42,6 @@
   </nav>
   
   
-  
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-body text-center">
-          <h5 class="modal-title mb-4" id="exampleModalLabel"></h5>
-          <button type="button" class="btn button-green me-2" id="btn-okey" data-bs-dismiss="modal">Aceptar</button> 
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <!-- Panel de sesión -->
   <div id="panelSesion" class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
@@ -83,11 +68,6 @@
     </div>
   </div>
   
-  <div class="row justify-content-center mt-4">
-    <ul class="msg justify-content-center" id="ul">
-      Mensajes
-    </ul>
-  </div>
   <script type="module" src="../js/logIn.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
