--- a/Proyecto-lector-huella/front/index.html
+++ b/Proyecto-lector-huella/front/index.html
@@ -16,7 +16,7 @@
       color: #dce0e6; 
       padding: 20px;
     }
-    .space{
+    body{
       background-image: linear-gradient(#1f1f20, #2b4c7e);
       background-size: 100% 100%;
       background-repeat: no-repeat;
@@ -27,7 +27,7 @@
     }
   </style>
 </head>
-<body class="space">
+<body>
     
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
