--- a/Proyecto-lector-huella/front/pages/eliminar.html
+++ b/Proyecto-lector-huella/front/pages/eliminar.html
@@ -18,7 +18,7 @@
       background-color: #B6D7A8;
       color: #FFFFFF;
   }
-  .space{
+  body{
     background-image: linear-gradient(#1f1f20, #2b4c7e);
     background-repeat: no-repeat;
     height: 100%;
@@ -27,7 +27,7 @@
     margin-bottom: 430px;
   }
 </style>
-<body class="space">
+<body>
 
     <nav class="navbar navbar-expand-lgk">
       <div class="container">
