refactor: Update body background color in registrar_huella.html

--- a/Proyecto-lector-huella/front/pages/registrar_huella.html
+++ b/Proyecto-lector-huella/front/pages/registrar_huella.html
@@ -20,7 +20,7 @@
     .txt-black {
       color: #000000;
     }
-    .space{
+    body{
         background-image: linear-gradient(#1f1f20, #2b4c7e);
         position: relative;
         inset: 0;
@@ -38,7 +38,7 @@
     }
   </style>
 </head>
-<body class="space">
+<body>
 
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
